Update em todos arquivos

--- a/Assistente de game/index.html
+++ b/Assistente de game/index.html
@@ -40,7 +40,7 @@
                     <button id="askButton">Perguntar</button>
                 </form>
 
-                <div id="aiResponse">
+                <div id="aiResponse" class="hidden">
                     <div id="response-content">
 
                     </div>
@@ -51,4 +51,5 @@
 </body>
 
 <script src="script.js"></script>
+<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 </html>
